--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     </tr>
 
   </table>
-  <a href="/About_me.html"> About me</a>
+  <a href="About_me.html"> About me</a>
   <br>
 
-  <a href="/contact_me.html">contact me</a>
+  <a href="contact_me.html">contact me</a>
 
 </body>
 
