--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </tr>
 
   </table>
-  <a href="About_me.html"> About me</a>
+  <a href="/About_me.html"> About me</a>
   <br>
 
   <a href="contact_me.html">contact me</a>
